--- a/app/src/main/res/layout/style_sp_c1.xml
+++ b/app/src/main/res/layout/style_sp_c1.xml
@@ -5,5 +5,7 @@
     android:layout_height="wrap_content"
     android:textColor="#000000"
     android:textSize="16dp"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:paddingLeft="5dp"
     android:background="#ffffff" />
